--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "server/index.js",
   "scripts": {
     "test": "jest --silent",
+    "testDb": "mocha",
     "start": "nodemon server/index.js",
     "build": "webpack --config webpack.config.js --mode development --watch",
     "prod": "webpack --config webpack.config.js --mode production",
@@ -23,6 +24,7 @@
   "homepage": "https://github.com/Charlotte-Badger/Reviews#readme",
   "dependencies": {
     "aws-sdk": "^2.897.0",
+    "axios": "^0.21.1",
     "babel-jest": "^26.6.3",
     "cors": "^2.8.5",
     "dotenv": "^8.6.0",
@@ -42,7 +44,6 @@
     "@babel/core": "^7.1.0",
     "@babel/preset-env": "^7.1.0",
     "@babel/preset-react": "^7.0.0",
-    "@shelf/jest-mongodb": "^1.2.5",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.1",
     "babel-loader": "^8.0.2",
     "babel-plugin-styled-components": "^1.12.0",
@@ -52,6 +53,7 @@
     "eslint-config-hackreactor": "git://github.com/reactorcore/eslint-config-hackreactor",
     "express-static-gzip": "^2.1.1",
     "jest": "^26.6.3",
+    "mocha": "^9.0.1",
     "ts-jest": "^26.5.6",
     "webpack": "^5.35.1",
     "webpack-cli": "^4.6.0",
