--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "styled-components": "^5.3.0"
   },
   "devDependencies": {
+    "@aws-sdk/client-s3": "^3.20.0",
+    "@aws-sdk/credential-provider-ini": "^3.20.0",
     "@babel/core": "^7.1.0",
     "@babel/preset-env": "^7.1.0",
     "@babel/preset-react": "^7.0.0",
