--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "axios": "^0.21.1",
     "babel-jest": "^26.6.3",
     "cors": "^2.8.5",
+    "couchbase": "^3.1.3",
     "dotenv": "^8.6.0",
     "express": "^4.17.1",
     "faker": "^5.5.3",
@@ -34,6 +35,7 @@
     "mongoose": "^5.12.5",
     "node-fetch": "^2.6.1",
     "nodemon": "^2.0.7",
+    "pg": "^8.6.0",
     "querystring": "^0.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -55,6 +57,7 @@
     "eslint-config-hackreactor": "git://github.com/reactorcore/eslint-config-hackreactor",
     "express-static-gzip": "^2.1.1",
     "jest": "^26.6.3",
+    "json2csv": "^5.0.6",
     "mocha": "^9.0.1",
     "ts-jest": "^26.5.6",
     "webpack": "^5.35.1",
