--- a/package.json
+++ b/package.json
@@ -36,9 +36,11 @@
     "node-fetch": "^2.6.1",
     "nodemon": "^2.0.7",
     "pg": "^8.6.0",
+    "pg-hstore": "^2.3.4",
     "querystring": "^0.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "sequelize": "^6.6.5",
     "shrink-ray-current": "^4.1.3",
     "styled-components": "^5.3.0"
   },
@@ -60,6 +62,7 @@
     "json2csv": "^5.0.6",
     "mocha": "^9.0.1",
     "ts-jest": "^26.5.6",
+    "uuid": "^8.3.2",
     "webpack": "^5.35.1",
     "webpack-cli": "^4.6.0",
     "webpack-dev": "^1.1.1",
