--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@babel/preset-env": "^7.1.0",
     "@babel/preset-react": "^7.0.0",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.1",
+    "artillery": "^1.7.6",
     "babel-loader": "^8.0.2",
     "babel-plugin-styled-components": "^1.12.0",
     "dotenv-webpack": "^7.0.2",
