--- a/package.json
+++ b/package.json
@@ -59,6 +59,8 @@
     "eslint": "^7.25.0",
     "eslint-config-hackreactor": "git://github.com/reactorcore/eslint-config-hackreactor",
     "express-static-gzip": "^2.1.1",
+    "grunt": "^1.4.1",
+    "grunt-aws-s3": "^2.0.2",
     "jest": "^26.6.3",
     "json2csv": "^5.0.6",
     "mocha": "^9.0.1",
