--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "faker": "^5.5.3",
     "moment": "^2.29.1",
     "mongoose": "^5.12.5",
+    "newrelic": "^8.0.0",
     "node-fetch": "^2.6.1",
     "nodemon": "^2.0.7",
     "pg": "^8.6.0",
