--- a/package.json
+++ b/package.json
@@ -26,10 +26,12 @@
     "aws-sdk": "^2.897.0",
     "axios": "^0.21.1",
     "babel-jest": "^26.6.3",
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^8.6.0",
     "express": "^4.17.1",
     "faker": "^5.5.3",
+    "memcached": "^2.2.2",
     "moment": "^2.29.1",
     "newrelic": "^8.0.0",
     "node-fetch": "^2.6.1",
