--- a/package.json
+++ b/package.json
@@ -30,8 +30,8 @@
     "cors": "^2.8.5",
     "dotenv": "^8.6.0",
     "express": "^4.17.1",
+    "express-redis-cache": "^1.1.3",
     "faker": "^5.5.3",
-    "memcached": "^2.2.2",
     "moment": "^2.29.1",
     "newrelic": "^8.0.0",
     "node-fetch": "^2.6.1",
